fixed text jumping while switching player

--- a/src/App.css
+++ b/src/App.css
@@ -93,5 +93,5 @@ td {
 }
 
 .playerInactive {
-  padding: 4px 0px;
+  padding: 8px 24px 12px 24px;
 }
